2015-03-28 v 1.0.8 Mark Grant <m.grant.prg@gmail.com>
	*  Remove redundant AutoConf hashpling.
	acmbuild script now at version 1.0.8.

2014-11-24 v 1.0.7 Mark Grant <m.grant.prg@gmail.com>
	*  Add support for including overall package version in script --version.
	acmbuild script now at version 1.0.8.

2014-11-18 v 1.0.6 Mark Grant <m.grant.prg@gmail.com>
	*  Re-structure OS specific requirements to test for generic *BSD OSs
	and use Linux as the default.
	acmbuild script now at version 1.0.7.

2014-11-16 v 1.0.5 Mark Grant <m.grant.prg@gmail.com>
	*  Remove erroneous option.
	acmbuild script now at version 1.0.6.

2014-11-16 v 1.0.4 Mark Grant <m.grant.prg@gmail.com>
	*  Modify getopt processing to allow for FreeBSD quirk of 2 different
	getopt programs on PATH. See comments in script at the start of "Main".
	acmbuild script now at version 1.0.5.

2014-11-13 v 1.0.3 Mark Grant <m.grant.prg@gmail.com>
	* Switch to use of GNU getopt to allow long options and implement them.
	acmbuild script now at version 1.0.4.

2014-10-27 v 1.0.2 Mark Grant <m.grant.prg@gmail.com>
	* Improve use of git describe.
	Change name to autoconf and make.
	Seperate commands in order to check exit status.
	
2014-06-25 v 1.0.1 Mark Grant <m.grant.prg@gmail.com>
	* Initial release.