@@ -1,5 +1,6 @@
 Release 1.0.8 2015-03-28
 Remove redundant AutoConf hashpling.
+Remove BSD support.
 
 Release 1.0.7 2014-11-24
 Add support for including overall package version in script --version.
